--- a/style.css
+++ b/style.css
@@ -9,28 +9,25 @@ body{
     background-color: white;
 }
 
-
-
-
-@media (min-width: 1280px){
+@media (max-width: 1413px){
 body {
     padding-left: 9.375rem;
     padding-right: 9.375rem;
 }}
 
-@media (min-width: 1024px){
+@media (max-width: 1024px){
 body {
     padding-left: 6.25rem;
     padding-right: 6.25rem;
 }}
-@media (min-width: 768px){
+@media (max-width: 768px){
 body {
     padding-left: 3.75rem;
     padding-right: 3.75rem;
 }
 }
 
-@media (min-width: 520px){
+@media (max-width: 520px){
 body {
     padding-left: 2.8125rem;
     padding-right: 2.8125rem;
@@ -176,7 +173,7 @@ body {
     color: rgba(255,255,255,var(--tw-text-opacity));
     border-radius: 0.9375rem;
     width: 100%;
-    grid-column: 1 / -1;
+    max-width: 100%;
 }
 
 .directpay{
@@ -196,39 +193,26 @@ body {
     font-size: 1.125rem;
     font-weight: lighter;
 }
-@media (min-width: 1024px){
-.lg\:grid-cols-partners-lg {
-    grid-template-columns: repeat(auto-fit,minmax(220px,1fr));
-}
-}
-
-@media (min-width: 768px){
-.md\:grid-cols-2 {
-    grid-template-columns: repeat(2,minmax(0,1fr));
-}}
 
 .flex-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    gap: 1em;
   }
   
   .flex-item-left {
-    background-size: cover;
-    background-position: 100% 100%;
-    padding: 3.75rem;
-    padding-bottom: 20rem!important;
-    border-radius: 0.9375rem;
     flex: 45%;
     
   }
-  
-  .flex-item-right {
+  .grid2-3{
     background-size: cover;
     background-position: 100% 100%;
     padding: 3.75rem;
     padding-bottom: 20rem!important;
     border-radius: 0.9375rem;
+  }
+  
+  .flex-item-right {
     flex: 45%;
    
   }
@@ -237,11 +221,184 @@ body {
   @media (max-width: 800px) {
     .flex-item-right, .flex-item-left {
       flex: 90%;
-      margin-left: 0px;
-      margin-right: 0px;
-
     }
-    .flex-item-right{
-        margin-top: 10px;
-    }
+  
   }
+
+  /*Section 4 */
+  .section4-div{
+    margin-top: 5.5rem;
+    margin-bottom: 9.375rem;
+    max-width: 75rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .app-h2-text{
+    line-height: 1.15!important;
+    font-family: Duplicate Sans,DM Sans,sans-serif;
+  }
+
+@media (max-width: 1024px){
+.app-h2-text {
+    font-size: 3.5rem;
+}
+}
+
+@media (max-width: 768px){
+    .app-h2-text {
+    font-size: 3rem;
+    line-height: 1;
+}
+}
+
+@media (min-width: 520px){
+    .app-h2-text {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+}
+}
+
+.section4-subtitle{
+    max-width: 100%;
+    line-height: 1.375!important;
+    margin-top: 1.875rem;
+    --tw-text-opacity: 1;
+    color: rgba(0,0,0,var(--tw-text-opacity));
+    font-size: 1.375rem;
+    font-weight: lighter;
+}
+.section4-bigdiv{
+    --tw-bg-opacity: 1;
+    background-color: rgba(245,245,245,var(--tw-bg-opacity));
+    border-radius: 0.9375rem;
+    overflow: hidden;
+    margin-top: 5rem;
+    padding-left: 3.75rem;
+    padding-right: 3.75rem;
+    padding-top: 3.75rem;
+}
+
+
+@media (max-width: 520px){
+.section4-bigdiv{
+    padding: 2.5rem;
+}
+}
+.listing-item{
+    overflow-x: auto;
+    align-items: center;
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 2.5rem;
+}
+.listingtext{
+    font-size: .9375rem;
+    line-height: 1.75rem;
+    padding-top: 0.8125rem;
+    padding-bottom: 0.8125rem;
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+    font-weight: 500;
+    max-lines: 1;
+    white-space: nowrap;
+}
+
+/*Section five*/
+
+.section5-div{
+    max-width: 100%;
+}
+.sec5-title{
+    font-family: Duplicate Sans,DM Sans,sans-serif;
+    max-width: 42rem;
+    width: 100%;
+    line-height: 1.15!important;
+    font-weight: 500;
+}
+.testimony{
+    --tw-bg-opacity: 1;
+    background-color: rgba(245,245,245,var(--tw-bg-opacity));
+    border-radius: 0.9375rem;
+    padding: 3.75rem;
+
+}
+@media (min-width: 1024px){
+.testimony {
+    margin-top: 5rem;
+   
+}
+}
+
+.textimony-text{
+    --tw-text-opacity: 1;
+    color: rgba(0,0,0,var(--tw-text-opacity));
+    font-size: 2.25rem;
+    font-family: Duplicate Sans, DM Sans, sans-serif;
+    line-height: 1.25!important;
+    margin-bottom: 50px;
+}
+
+@media (max-width: 520px){
+.textimony-text {
+    font-size: 1.625rem;
+}    
+}
+@media (max-width: 768px){
+    .textimony-text {
+        margin-bottom: 3.125rem;
+        font-size: 1.875rem;
+        line-height: 2.25rem;
+    }    
+    }
+
+@media (max-width: 1024px){
+    .textimony-text {
+        margin-bottom: 3.125rem;
+        font-size: 2.25rem;
+    line-height: 2.5rem;
+    }    
+}
+
+.apostroph{
+    width: 2.5rem;
+    height: 2.5rem;
+    margin-bottom: 1.875rem;
+}
+@media (max-width: 520px){
+    .apostroph{
+        width: 2rem;
+        height: 2rem
+    }
+}
+
+@media (max-width: 300px){
+    .apostroph{
+        width: 1.5rem;
+        height: 1.5rem
+    }
+}
+
+.testimony-person{
+    align-items: center;
+    display: flex;
+    
+
+}
+
+.testimony-person-name{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+    font-weight: bold;
+
+}
+
+.testimony-person-position{
+    font-size: .9375rem;
+    --tw-text-opacity: 1;
+    color: rgba(96,96,96,var(--tw-text-opacity));
+    line-height: 1rem;
+    font-weight: lighter;
+}
